--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
   <html>
     <head>
-		    <meta charset="utf-8">
-        <!-- <link rel="stylesheet" href="/src/style.css"> -->
-		    <title>Solar System</title>
+      <title>Solar System</title>
+
+      <meta name="viewport" content="width=divce-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		  <meta charset="utf-8">
+
+      <link rel="stylesheet" href="/src/style.css" type="text/css">
+
 	  </head>
 	  <body>
+      <div id="container">
+        <!-- contains scene -->
+      </div>
+
       <div id="menuOverlay">
         <!-- This is where all the menus would go -->
         <!-- <button id="testButton">THIS IS A TEST BUTTON</button> -->
@@ -21,5 +29,9 @@
         <script src="./src/render.js"></script>
         <script src="./src/eventHandler.js"></script> -->
 
+        <footer>
+          <!-- Hold scripts to run the app -->
+          <script src="src/main.js"></script>
+        </footer>
      </body>
   </html>
