--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <!-- <button id="testButton">THIS IS A TEST BUTTON</button> -->
       </div>
 
-        <p> HELLO WORLD </p>
         <!-- <script src="//threejs.org/build/three.min.js"></script>
         <script src="//threejs.org/examples/js/loaders/GLTFLoader.js"></script>
         <script src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
@@ -29,9 +28,8 @@
         <script src="./src/render.js"></script>
         <script src="./src/eventHandler.js"></script> -->
 
-        <footer>
-          <!-- Hold scripts to run the app -->
-          <script src="src/main.js"></script>
-        </footer>
+
+        <script type="module" src="src/main.js"></script>
+
      </body>
   </html>
