--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>Solar System</title>
 
-      <meta name="viewport" content="width=divce-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+      <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		  <meta charset="utf-8">
 
       <link rel="stylesheet" href="/src/style.css" type="text/css">
