--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		  <meta charset="utf-8">
 
-      <link rel="stylesheet" href="/src/style.css" type="text/css">
+      <link rel="stylesheet" href="/style.css" type="text/css">
 
 	  </head>
 	  <body>
