added main.js to rollup and it now works

--- a/index.html
+++ b/index.html
@@ -10,25 +10,8 @@
 
 	  </head>
 	  <body>
-      <div id="container">
-        <!-- contains scene -->
-      </div>
 
-      <div id="menuOverlay">
-        <!-- This is where all the menus would go -->
-        <!-- <button id="testButton">THIS IS A TEST BUTTON</button> -->
-      </div>
-
-        <!-- <script src="//threejs.org/build/three.min.js"></script>
-        <script src="//threejs.org/examples/js/loaders/GLTFLoader.js"></script>
-        <script src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
-
-        <script type="application/json" src="./solarSystem.json"></script>
-        <script src="./src/solar.js"></script>
-        <script src="./src/render.js"></script>
-        <script src="./src/eventHandler.js"></script> -->
-
-
+        <main-app></main-app>
         <script type="module" src="src/main.js"></script>
 
      </body>
