--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	  </head>
 	  <body>
-
+        <button id="xr-button">Start AR</button>
         <main-app></main-app>
         <script type="module" src="src/main.js"></script>
 
